--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,12 @@
 ja:
     enums:
       order:
+        status:
+          waiting: "入金待ち"
+          paid_up: "入金確認"
+          in_production: "製作中"
+          preparing: "発送準備中"
+          shipped: "発送済み"
         payment_method:
           credit_card: "クレジットカード"
           transfer: "銀行振込"
